--- a/MobileViewEngine/MobileViewEngine/MobileViewEngineTests/MobileViewEngineTests.csproj
+++ b/MobileViewEngine/MobileViewEngine/MobileViewEngineTests/MobileViewEngineTests.csproj
@@ -39,9 +39,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft ASP.NET\ASP.NET MVC 2\Assemblies\System.Web.Mvc.dll</HintPath>
+    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft ASP.NET\ASP.NET MVC 2\Assemblies\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,7 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrowserCapabilitiesStub.cs" />
+    <Compile Include="MobileDeviceRuleTests.cs" />
     <Compile Include="MobileViewEngineTests.cs" />
+    <Compile Include="PlatformSpecificRuleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewEngineStub.cs" />
     <Compile Include="ViewStub.cs" />
